<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Maple Tracker</string>
    <string name="title_home">Home</string>
    <string name="title_management">Management</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_new_tree">New Tree</string>
    <string name="title_edit_tree">Edit Tree</string>
    <string name="temperature_default" translatable="false">…°C</string>
    <string name="temperature_replace" translatable="false">%1$.1f°C</string>
    <string name="temperature_replace_fahrenheit" translatable="false">%1$.1f°F</string>
    <string name="new_tree">Add New Tree</string>
    <string name="hello">Hello</string>
    <string name="create_tree">Create New Tree</string>
    <string name="edit_tree">Edit Tree</string>
    <string name="tree_name">Tree Name</string>
    <string name="edit_name">Edit Name</string>
    <string name="save">Save</string>
    <string name="syrup_collected">Add Sap Collected</string>
    <string name="new_name_default">No Name</string>
    <string name="litres">Litres</string>
    <string name="gallons">Gallons</string>
    <string name="default_number" translatable="false">0.0</string>
    <string name="unit_litres" translatable="false">%1$.2f L</string>
    <string name="unit_gallons" translatable="false">%1$.2f gal</string>
    <string name="statistics_tree_title" translatable="false">%s:\nTotal sap: %s\nSap this year: %s</string>
    <string name="statistics_tree_count">Tree count: %d</string>
    <string name="statistics_total_sap">Total sap collected: %s</string>
    <string name="statistics_average_sap">Average sap collected per tree: %s</string>
    <string name="statistics_sap_yearly">Total sap collected this year: %s</string>
    <string name="statistics_average_sap_yearly">Average sap collected per tree this year: %s</string>
    <string name="statistics_total_syrup">Total syrup collected: %s</string>
    <string name="statistics_average_syrup">Average syrup collected per tree: %s</string>
    <string name="statistics_syrup_yearly">Total syrup collected this year: %s</string>
    <string name="statistics_average_syrup_yearly">Average syrup collected per tree this year: %s</string>
    <string name="statistics_edits">Total trees logged: %d</string>
    <string name="statistics_edits_yearly">Trees logged this year: %d</string>
    <string name="splash_default" translatable="false">…</string>
    <string name="select_tree">Select tree</string>
    <string-array name="splash_good" tools:ignore="InconsistentArrays">
        <item>It\'s prime tapping time!</item>
        <item>The sap is flowing!</item>
        <item>Maple syrup season is here!</item>
        <item>Try tapping some trees!</item>
        <item>The trees are hard at work.</item>
        <item>Syrup is on the table!</item>
    </string-array>
    <string-array name="splash_bad" tools:ignore="InconsistentArrays">
        <item>No sap today.</item>
        <item>No syrup on the table yet.</item>
        <item>The trees are taking their break.</item>
        <item>Try tapping later!</item>
        <item>Trees aren\'t on the job right now.</item>
        <item>Leave the trees alone!</item>
        <item>Cut them some slack!</item>
        <item>It\'s their napping season now.</item>
        <item>It\'s like the sap is hibernating.</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>
    <string name="use_gallons">Use gallons</string>
    <string name="use_fahrenheit">Use fahrenheit</string>
    <string name="use_debug_mode" translatable="false">Use debug mode</string>
    <string name="debug" translatable="false">Debug</string>
    <string name="select_farm">Select a farm:</string>
    <string name="_1" translatable="false">1</string>
    <string name="_2" translatable="false">2</string>
    <string name="_3" translatable="false">3</string>
    <string name="_4" translatable="false">4</string>
    <string name="_5" translatable="false">5</string>
    <string name="_6" translatable="false">6</string>
    <string name="confirm_delete">Are you sure you want to delete this farm?</string>
    <string name="alert">Alert!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="tree_saved">Saved your new tree.</string>
    <string name="none_selected">You haven\'t selected a pin yet!</string>
    <string name="changes_saved">Changes saved.</string>
    <string name="credits">Credits</string>
    <string name="credits_text">
        Developers:\n- Zachary Backmeier\n- Kaleb MacArthur\n\nData Source: Environment and Climate Change Canada\nData Source: Open Street Map
    </string>
    <string name="permission_error">No permission!</string>
    <string name="forecast">Forecast:</string>
    <string name="weather_icon">Weather Icon</string>
    <string name="help">Help</string>
    <string name="help_text" translatable="false">Home menu:\nThe weather is displayed here. You can see the forecast and the weather/forecasted weather there. you can access the settings menu from the top right button as well.\n\nSettings menu:\nHere, you can adjust a few localisation modifications. For example, you can choose your preferred units of measuring temperature, as well as measuring fluids. You can also choose between up to six different farms, which allows you to keep track of multiple farms in which you are tapping. You can long press the farm to clear all the trees. A pop-up menu will alert you before you accidentally delete all of your trees.Lastly, there are links to the credits and help menus.\n\nManagement page:\nContains links to the new tree and edit tree pages.\n\nNew tree page:\nIn this interface, you can choose where and how you will place a new tree. You can give it a name to better help you identify it. You can also put the amount of sap you\'ve already collected from it if you are interested. To move it into proper place, move the map around and zoom into where you would like the tree to be placed. Press SAVE when you are done filling out the information.\n\nEdit tree page:\nHere, you can use the dropdown menu to select a tree that you would like to edit. You can also tap on trees on the map to select them. Then, you are free to change the trees name, and add in the change of sap. For example, if you collected 10 more litres of sap, you can add in 10L to the tree. This is also where you can delete a tree if needed with the Delete button. And you can save your modifications to your tree there as well.\n\nStatistics page:\nAll of your trees will be shown here to show you general statistics for all your trees combined, and you can tap a tree to see specific stats for that single tree as well.</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete_tree">Are you sure you want to delete this tree?</string>
    <string name="no_trees">You have no trees!</string>
</resources>