<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="30dp"
    android:layout_marginBottom="30dp"
    android:layout_marginEnd="30dp"
    android:orientation="vertical">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/use_gallons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/use_gallons" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/use_fahrenheit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/use_fahrenheit" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/use_debug_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="@string/use_debug_mode" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/select_farm" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/farm_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/farm_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/_2"
            android:translationX="0dp"
            android:translationY="0dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/farm_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/_3"
            android:translationX="0dp"
            android:translationY="0dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/farm_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/farm_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/_5"
            android:translationX="0dp"
            android:translationY="0dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/farm_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/_6"
            android:translationX="0dp"
            android:translationY="0dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/credits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credits"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
</LinearLayout>