<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ocdsb.mapletracker.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_management"
        android:name="com.ocdsb.mapletracker.ui.management.ManagementFragment"
        android:label="@string/title_management"
        tools:layout="@layout/fragment_management" >
    <action
        android:id="@+id/action_Management_to_NewTree"
        app:destination="@id/navigation_new_tree"
        />
    <action
        android:id="@+id/action_Management_to_Edit"
        app:destination="@id/navigation_edit_tree"
        />

    </fragment>


    <fragment
        android:id="@+id/navigation_new_tree"
        android:name="com.ocdsb.mapletracker.ui.management.NewTreeFragment"
        android:label="@string/title_new_tree"
        tools:layout="@layout/fragment_new_tree" />
    <fragment
        android:id="@+id/navigation_edit_tree"
        android:name="com.ocdsb.mapletracker.ui.management.NewTreeFragment"
        android:label="@string/title_edit_tree"
        tools:layout="@layout/fragment_edit_tree" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.ocdsb.mapletracker.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" >
        <action
            android:id="@+id/action_NewTree_to_Management"
            app:destination="@id/navigation_management"
            />
    </fragment>
</navigation>