<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.management.NewTreeActivity">

    <org.osmdroid.views.MapView
        android:id="@+id/map"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:translationX="0dp"
        android:translationY="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/tree_name"
        android:textSize="14sp"
        android:translationX= "25dp"
        android:translationY="-315dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/addName"
        android:labelFor="@id/addName"
        android:inputType="textCapSentences|textAutoCorrect"
        android:imeOptions="actionSend"
        android:layout_width="125dp"
        android:layout_height="48dp"
        android:layout_gravity="start"
        android:translationY="-315dp"
        android:translationX="25dp"
        android:textSize="14sp"
        android:text="@string/new_name_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="treeIdentifier" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/syrup_collected"
        android:textSize="14sp"
        android:translationX= "25dp"
        android:translationY="-290dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:autofillHints="sapCollected"
        android:id="@+id/add_collected"
        android:inputType="numberDecimal"
        android:imeOptions="actionSend"
        android:layout_width="125dp"
        android:layout_height="48dp"
        android:layout_gravity="start"
        android:translationY="-290dp"
        android:translationX="25dp"
        android:textSize="14sp"
        android:text="@string/default_number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/units_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/litres"
        android:textSize="14sp"
        android:translationX="150dp"
        android:layout_marginStart="0dp"
        android:translationY="-320dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_button2"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:translationY="25dp"
        app:cornerRadius="20dp"
        android:text="@string/save"
        android:textColor="?attr/colorOnPrimary"
        app:backgroundTint="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</LinearLayout>