<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/edit_tree_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.management.EditTreeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:hint="@string/select_tree"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <AutoCompleteTextView
                android:id="@+id/tree_dropDown"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="textAutoComplete"
                android:text="@string/select_tree" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/tree_name"
            android:textSize="14sp"
            android:translationX="25dp"
            android:translationY="25dp"
            android:layout_marginTop="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/editName"
            android:inputType="textCapSentences|textAutoCorrect"
            android:imeOptions="actionSend"
            android:layout_width="125dp"
            android:layout_height="48dp"
            android:layout_gravity="start"
            android:translationX="25dp"
            android:translationY="25dp"
            android:layout_marginTop="0dp"
            android:textSize="14sp"
            android:text="@string/edit_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/syrup_collected"
            android:textSize="14sp"
            android:translationX= "25dp"
            android:translationY="25dp"
            android:layout_marginTop="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:autofillHints="sapCollected"
            android:id="@+id/edit_collected"
            android:inputType="numberDecimal"
            android:imeOptions="actionSend"
            android:layout_width="125dp"
            android:layout_height="48dp"
            android:layout_gravity="start"
            android:layout_marginTop="0dp"
            android:translationX="25dp"
            android:translationY="25dp"
            android:textSize="14sp"
            android:text="@string/default_number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/units_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/litres"
            android:textSize="14sp"
            android:translationX="150dp"
            android:translationY="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <org.osmdroid.views.MapView
            android:id="@+id/map"
            android:layout_width="300dp"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal"
            android:translationX="0dp"
            android:translationY="15dp"
            android:layout_marginTop="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_collected" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_button"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:translationY="25dp"
            app:cornerRadius="20dp"
            android:text="@string/save"
            android:textColor="?attr/colorOnPrimary"
            app:backgroundTint="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/map"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/delete_button"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:translationY="25dp"
            app:cornerRadius="20dp"
            android:text="@string/delete"
            android:textColor="?attr/colorOnPrimary"
            app:backgroundTint="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/save_button"/>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>